--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.6.RELEASE'
 	id 'java'
+	id "org.flywaydb.flyway" version "5.2.4"
+
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -14,7 +16,11 @@ repositories {
 }
 
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.postgresql:postgresql:42.2.5'
+	compile('org.flywaydb:flyway-core')
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.h2database:h2:1.4.199'
 }
