smtp server to recieve emails (local) - wip

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -14,3 +14,7 @@ spring.jpa.database=postgresql
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 
+smtpserver.enabled=true
+smtpserver.hostName=localhost
+smtpserver.domain=localhost
+smtpserver.port=2525
