--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
 	compile 'org.postgresql:postgresql:42.2.5'
 	compile('org.flywaydb:flyway-core')
+	compile ("org.subethamail:subethasmtp:3.1.7")
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
