--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,8 @@ dependencies {
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compile group: 'javax.mail', name: 'mail', version: '1.4.1'
+	compile group: 'javax.mail', name: 'javax.mail-api', version: '1.6.0'
+
 }
