base implementaion of using gmail as mail server to get spire archive. need to define entities further and decide how to save json.

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -18,3 +18,6 @@ smtpserver.enabled=true
 smtpserver.hostName=localhost
 smtpserver.domain=localhost
 smtpserver.port=2525
+
+email.username=sendtospireonline@gmail.com
+email.password=spire666!
